[package]
name = "second-chance"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clap = "4.5.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
